* added bibliography for copy number vignette.  Added file inst/doc/refs.bib
* added boxplot method 

2009-10-03 R. Scharpf - committed version 1.3.21

* modified crlmmWrapper function
* modified illumina copy number vignette (still needs debugging)
* changed title of copy number vignette
* added reference to the crlmm paper
* changed copyNumber() method so that CA + NA = NA, CB + NA = NA (previously had CA+NA=CA, but this can result in a lot of zeros, depending on the genotype)
* new method: addFeatureAnnotation
* support for snp5.0

2009-10-04 R. Scharpf - committed version 1.3.22

* changed default path argument for readIdatFiles to empty quotes
* fixed bug in update method for character strings
* updated addFeatureAnnotation so that CHR arg not required
* fixed bug in nonpolymorphic function -- function checks whether any regions are pseudoautosomal 
* fixed bug in list2locusset function (no longer assigns genomewidesnp6 as the default annotation)

2009-10-16 R. Scharpf - committed version 1.3.23

 * 100*CA, 100*CB are stored in the CA, CB assayDataElements.  The
   replacement method automatically converts a matrix on the copy
   number scale to an integer representation by scaling by a factor of
   100. The accessor methods for CA, CB automatically divide by 100 to
   return estimates back on the original copy number scale.

 * more debugging of readIdatFiles and illumina copy number vignette.

 * updated illumina_copynumber vignette

2009-10-25 M Ritchie - committed version 1.3.24

 * fixed bug in readIdatFiles()

 * updated crlmmIllumina.Rnw and crlmmIllumina.pdf

2009-11-14 B Carvalho - committed version 1.5.2

 * code cleanup - removed unneeded C code

2009-11-15 R. Scharpf - committed version 1.5.3

 * numerous changes to the copy number estimation
 - ABset and CrlmmSetList classes are gone. Using SnpCallSetPlus and CrlmmSet
 - Added class SegmentSet that extends CrlmmSet directly.

