@@ -319,4 +319,10 @@ is decoded and scanned
  - ABset and CrlmmSetList classes are gone. Using SnpCallSetPlus and CrlmmSet
  - Added class SegmentSet that extends CrlmmSet directly.
 
+2009-11-15 B Carvalho - committed version 1.5.4
+
+ * removed references to old C code
+ * added the missing files to the Collate field
+ * fixed classes imported from oligoClasses in NAMESPACE
+ * imported 'calls<-' from oligoClasses
 
